[package]
name = "open_mojave"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Window library
winit = { version = "0.29", features = ["rwh_05"] }

# Rendering library
wgpu = "0.18"

# Math
nalgebra = "0.32"

# Physics
rapier3d = { version = "0.17", features = ["simd-stable"] }

# Logging
log = "0.4"
fern = "0.6"
log-panics = { version = "2", features = ["with-backtrace"] }
humantime = "2.1.0"

# Utils
bitflags = "2.4.1"
num_enum = "0.7"
thiserror = "1"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"

# Performance libs
fxhash = "0.2.1"

# Async
pollster = "0.3.0"

# ECS
bevy_ecs = "0.12"

# Optimize engine dependencies in debug mode
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev.package.open_mojave]
opt-level = 1
