[package]
name = "open_mojave"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# Game engine
bevy = { version = "0.12.0", features = ["dynamic_linking"] }

# Physics
bevy_rapier3d = { version = "0.23", features = ["simd-stable"] }

# Utils
bitflags = "2.4.1"
num_enum = "0.7"
thiserror = "1"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
libflate = "2"
byteorder = "1.5"
futures = "0.3"
binrw = "0.13"

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"
bsa = "0.2.1"

# Optimize engine dependencies in debug mode
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev.package.open_mojave]
opt-level = 1
