
[package]
name = "open_mojave"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox.workspace = true

bitflags = "2.4"
binrw = "0.11"
bsa = "0.2"
nom = "7"

serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"
parking_lot = "0.12.1"

espers = { version = "0.1", path = "../espers" }
